Adjust more icons

--- a/ui/scss/component/_media.scss
+++ b/ui/scss/component/_media.scss
@@ -255,6 +255,12 @@
     }
   }
 
+  .icon--DollarSign {
+    stroke-width: 1.5;
+    transform: scale(0.8);
+    margin-right: -4px;
+  }
+
   @media (max-width: $breakpoint-small) {
     flex-wrap: wrap;
     justify-content: space-around !important;
