Adjust repost ribbon in most supported search result

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -425,7 +425,7 @@
     left: 0px;
     top: 0px;
     font-size: var(--font-small);
-    opacity: 0.8;
+    // opacity: 0.8;
     z-index: 5;
 
     svg {
