--- a/ui/scss/component/_ads.scss
+++ b/ui/scss/component/_ads.scss
@@ -102,7 +102,6 @@
 
     .ad__container {
       width: calc(var(--file-list-thumbnail-width) * 1.2);
-      // margin-left: var(--spacing-s);
       margin-right: var(--spacing-s);
     }
   }
@@ -153,6 +152,41 @@
 
   .ad__container {
     width: 100%;
+    @media (max-width: $breakpoint-small) {
+      background: red;
+      & > div:first-child {
+        margin: unset !important;
+        max-width: unset !important;
+        height: 100%;
+        & > div:first-child {
+          height: 100%;
+          & > div:first-child {
+            height: 100%;
+            & > div:first-child {
+              height: 100%;
+              & > div:first-child {
+                height: 100%;
+                & > div:first-child {
+                  width: 100%;
+                  height: 100%;
+                  .avp-body {
+                    height: 100%;
+                    .avp-content {
+                      width: 100%;
+                      height: 100%;
+                      .avp-source {
+                        width: 100% !important;
+                        height: 100% !important;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 
   .ads__claim-text {
