--- a/ui/scss/component/_media.scss
+++ b/ui/scss/component/_media.scss
@@ -326,6 +326,22 @@
       flex: auto;
     }
 
+    .button {
+      flex-grow: 1;
+      flex-basis: 0;
+      min-width: 0;
+    }
+    .button--file-action--tooltip-wrapper {
+      flex-basis: 0 !important;
+      min-width: 0;
+      flex: unset;
+    }
+    .button--file-action--menu {
+      flex-grow: 0.4;
+      flex-basis: 0;
+      min-width: 0;
+    }
+
     &.stretch {
       margin-top: var(--spacing-xxxs);
       .button {
