--- a/ui/component/preorderAndPurchaseContentCard/style.scss
+++ b/ui/component/preorderAndPurchaseContentCard/style.scss
@@ -15,3 +15,10 @@
   font-size: var(--font-small);
   margin-top: var(--spacing-s);
 }
+
+.fiat-order__claim-preview {
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-border);
+  padding: var(--spacing-s);
+  margin-bottom: var(--spacing-l);
+}
