--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -370,6 +370,12 @@ $thumbnailWidthSmall: 2rem;
       padding-left: 2px;
       margin-right: var(--spacing-xxs);
     }
+
+    @media (max-width: $breakpoint-small) {
+      min-width: 22px;
+      max-width: 22px;
+      border-radius: 50%;
+    }
   }
 }
 
