fix: support button on channel page

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -513,7 +513,8 @@ $actions-z-index: 2;
   }
 
   > .button,
-  > .button-group {
+  > .button-group,
+  > .button--file-action--tooltip-wrapper {
     &:not(:last-child) {
       margin-right: var(--spacing-s);
     }
