fix: remove tooltip wrapper due children not accessible
- all was needed was passing other props and ref to returned button components

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -513,8 +513,7 @@ $actions-z-index: 2;
   }
 
   > .button,
-  > .button-group,
-  > .button--file-action--tooltip-wrapper {
+  > .button-group {
     &:not(:last-child) {
       margin-right: var(--spacing-s);
     }
