Adjust margin in sort buttons in comment section on mobile

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -26,6 +26,12 @@
         margin: 0px var(--spacing-xxs);
       }
 
+      .comment__sort {
+        .button__label {
+          margin-right: var(--spacing-xxs);
+        }
+      }
+
       .button + .commentCreate {
         margin-top: var(--spacing-xxs);
       }
