Restore original modal width + add wide options
## Issue
The modal was widen to make the Support modal not overflow, but it caused the following:
- Too much empty space in modals (e.g. in Publish Preview)
- Prompts are harder to read since the column is too wide. This might be the reason why some developer tried to center the text.

## Approach
Restore the original width, and add several "wide" options

--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -816,7 +816,7 @@ svg + .button__label {
 }
 
 .button-toggle-group-action {
-  position: absolute; // Centers the button along toggle buttons
+  display: inline-block;
   margin-left: var(--spacing-xs);
 
   @media (max-width: $breakpoint-small) {
