--- a/ui/scss/init/_vars.scss
+++ b/ui/scss/init/_vars.scss
@@ -84,7 +84,8 @@
   --card-box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 
   // Modal
-  --modal-width: 750px;
+  --modal-width: 550px;
+  --modal-width-wide: 750px;
 
   // Animation :)
   --animation-duration: 0.2s;
