FilePrice: show purchase-rental info
## Changes on existing behavior
Show the price label even if the claim is yours. Much easier for creators to detect and pricing issues than having to check in Incognito.

## New changes
Show fiat purchase-rental information.

## Code changes
- Simplify the method to skew the price label by not using `:before`.
- Fix classes to be closer to BEM. @extend not required.

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -1663,7 +1663,7 @@ $claim-preview-progress-bar-height: 5px;
   }
 
   & > *:not(:last-child) {
-    margin-right: var(--spacing-xxs);
+    margin-right: calc(var(--spacing-xxs) / 2);
   }
 }
 
