--- a/ui/scss/init/_base-theme.scss
+++ b/ui/scss/init/_base-theme.scss
@@ -189,6 +189,8 @@
   --color-tab-divider: var(--color-primary);
   --color-modal-background: var(--color-card-background);
   --color-login-graphic-background: var(--color-secondary);
+  --color-fiat-payment: #ea580c; // #f77d35;
+  --color-fiat-payment-decimal: 234, 88, 12;
 
   // Ads
   --color-ads-background: #fae5ff;
