--- a/ui/scss/component/_file-price.scss
+++ b/ui/scss/component/_file-price.scss
@@ -1,74 +1,90 @@
 @import '../init/breakpoints';
 
+$SKEW_AMOUNT: 10deg;
+
 .filePrice {
   position: relative;
   display: flex;
   align-items: center;
   color: var(--color-purchased-text);
+  background-color: rgba(var(--color-primary-dynamic), 1);
+  border-radius: calc(var(--border-radius) / 2);
 
-  .credit-amount,
-  .icon--Key {
+  .credit-amount {
     position: relative;
-    margin-left: var(--spacing-m);
+    padding: 0 var(--spacing-xxxs);
     white-space: nowrap;
     color: var(--color-primary-contrast);
   }
+}
 
-  .icon--Key {
-    margin-right: var(--spacing-m);
+.filePrice--skewedBg {
+  transform: skew($SKEW_AMOUNT);
+
+  .icon,
+  .credit-amount {
+    transform: skew(-$SKEW_AMOUNT);
   }
+}
 
-  &::before {
-    position: absolute;
-    content: '';
-    left: 0;
-    width: 250%;
-    height: 160%;
-    transform: skew(15deg);
-    background-color: rgba(var(--color-primary-dynamic), 1);
+.filePrice--fiat {
+  background-color: var(--color-fiat-payment);
+
+  .credit-amount {
+    margin-bottom: -0.2rem; // Numbers don't have descenders.
+  }
+}
+
+.filePrice--thumbnail {
+  height: 1.2rem;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
 .filePrice--filepage {
-  font-size: var(--font-body);
-  top: calc(var(--spacing-xxs) * -1);
-  margin-left: var(--spacing-m);
+  padding: 0 var(--spacing-s);
   height: 2.4rem;
 
-  .credit-amount {
-    margin: 0 var(--spacing-m);
-    margin-bottom: -0.9rem;
-  }
-
-  &::before {
-    // height: 250%;
-    // left: calc(var(--spacing-m) * -1);
-    border-radius: 0;
-    border-bottom-left-radius: var(--border-radius);
-    border-width: 5px;
-    border-top-width: 0;
-  }
+  opacity: 0;
+  animation: fadeIn 1.5s;
+  animation-fill-mode: forwards;
 
   @media (max-width: $breakpoint-small) {
-    padding: var(--spacing-s);
+    padding: 0 var(--spacing-xs);
+    height: 2rem;
+  }
 
-    &::before {
-      height: 140%;
+  .credit-amount {
+    @media (max-width: $breakpoint-small) {
+      margin-right: 0 !important;
     }
   }
 }
 
+.filePrice--filepage.filePrice--skewedBg {
+  // Buy some space to avoid clipping.
+  // Not sure why it's not needed for claim thumbnails.
+  margin-left: calc(var(--spacing-s) / 2);
+  margin-right: calc(var(--spacing-s) / 2);
+}
+
 .filePrice--modal {
   border: 5px solid var(--color-purchased);
-  border-radius: var(--border-radius);
   font-size: var(--font-body);
-  height: 4rem;
+  height: 3.5rem;
   background-color: var(--color-purchased-alt);
-  transform: skew(15deg);
+  transform: skew($SKEW_AMOUNT);
 
   .icon,
   .credit-amount {
-    transform: skew(-15deg);
+    transform: skew(-$SKEW_AMOUNT);
   }
 
   .credit-amount {
@@ -83,44 +99,22 @@
   }
 }
 
-.filePrice__key {
-  @extend .filePrice;
-  color: var(--color-gray-5);
-  top: 0;
+.filePrice--key {
+  background-color: var(--color-purchased);
+
+  .icon--Key {
+    margin-left: var(--spacing-m);
+    margin-right: var(--spacing-m);
+
+    @media (max-width: $breakpoint-small) {
+      margin-left: var(--spacing-s);
+      margin-right: var(--spacing-s);
+    }
+  }
 
   .icon {
     stroke: black;
     stroke-width: 2;
-  }
-
-  &::before {
-    background-color: var(--color-purchased);
-    height: 180%;
-  }
-}
-
-.filePrice__key--filepage {
-  @extend .filePrice--filepage;
-  top: 0;
-
-  &::before {
-    height: 300%;
-  }
-
-  .icon {
-    margin: 0 var(--spacing-m);
-  }
-
-  @media (max-width: $breakpoint-small) {
-    &::before {
-      top: calc(-1 * var(--spacing-s));
-      height: 110%;
-    }
-
-    .icon {
-      top: calc(-1 * var(--spacing-s));
-      margin: 0 var(--spacing-xs);
-    }
   }
 }
 
@@ -145,5 +139,23 @@
     content: '';
     transform: skew(15deg);
     animation: expand 2.5s 1 ease-out;
+  }
+}
+
+.filePriceFiatDuo {
+  display: flex;
+
+  & > *:not(:last-child) {
+    margin-right: calc(var(--spacing-xxs) / 2);
+  }
+}
+
+.filePriceFiatDuo--filePage {
+  @media (max-width: $breakpoint-small) {
+    flex-direction: column;
+
+    & > *:not(:last-child) {
+      margin-bottom: calc(var(--spacing-xxs) / 2);
+    }
   }
 }
