--- a/ui/scss/component/_file-price.scss
+++ b/ui/scss/component/_file-price.scss
@@ -16,6 +16,10 @@ $SKEW_AMOUNT: 10deg;
     white-space: nowrap;
     color: var(--color-primary-contrast);
   }
+
+  .credit-amount__prefix-icon {
+    color: var(--color-primary-contrast);
+  }
 }
 
 .filePrice--skewedBg {
@@ -37,6 +41,11 @@ $SKEW_AMOUNT: 10deg;
 
 .filePrice--thumbnail {
   height: 1.2rem;
+  .credit-amount__prefix-icon {
+    margin-left: var(--spacing-xxxs);
+    width: 12px;
+    height: 12px;
+  }
 }
 
 @keyframes fadeIn {
