FilePrice: show purchased icon + hide purchase-rental price if no space
Currently it assumes "no space" when it's both a Rental and Purchase. Ideally, it should do some responsive-design stuff to determine that.

--- a/ui/scss/component/_file-price.scss
+++ b/ui/scss/component/_file-price.scss
@@ -41,10 +41,15 @@ $SKEW_AMOUNT: 10deg;
 
 .filePrice--thumbnail {
   height: 1.2rem;
+
   .credit-amount__prefix-icon {
     margin-left: var(--spacing-xxxs);
     width: 12px;
     height: 12px;
+  }
+
+  .credit-amount__prefix-icon:only-child {
+    margin-right: var(--spacing-xxxs);
   }
 }
 
