--- a/ui/scss/init/_mixins.scss
+++ b/ui/scss/init/_mixins.scss
@@ -241,3 +241,103 @@
     width: $size !important;
   }
 }
+
+@mixin tier-restriction-checkbox {
+  display: inline-block;
+  margin-top: 0;
+  margin-right: var(--spacing-s);
+
+  label {
+    padding: var(--spacing-xxxs) var(--spacing-s);
+    border-radius: var(--border-radius);
+
+    &::before,
+    &::after {
+      display: none;
+    }
+  }
+
+  input[type='checkbox'] + label {
+    opacity: 0.8;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  input[type='checkbox']:checked + label {
+    opacity: 1;
+  }
+
+  &:nth-of-type(1) {
+    input[type='checkbox'] + label {
+      border: 2px solid rgba(var(--color-membership-1), 0.6);
+      background-color: rgba(var(--color-membership-1), 0.2);
+      &:hover {
+        background-color: rgba(var(--color-membership-1), 0.4);
+      }
+    }
+    input[type='checkbox']:checked + label {
+      background-color: rgba(var(--color-membership-1), 1);
+    }
+  }
+  &:nth-of-type(2) {
+    input[type='checkbox'] + label {
+      border: 2px solid rgba(var(--color-membership-2), 0.6);
+      background-color: rgba(var(--color-membership-2), 0.2);
+      &:hover {
+        background-color: rgba(var(--color-membership-2), 0.4);
+      }
+    }
+    input[type='checkbox']:checked + label {
+      background-color: rgba(var(--color-membership-2), 1);
+    }
+  }
+  &:nth-of-type(3) {
+    input[type='checkbox'] + label {
+      border: 2px solid rgba(var(--color-membership-3), 0.6);
+      background-color: rgba(var(--color-membership-3), 0.2);
+      &:hover {
+        background-color: rgba(var(--color-membership-3), 0.4);
+      }
+    }
+    input[type='checkbox']:checked + label {
+      background-color: rgba(var(--color-membership-3), 1);
+    }
+  }
+  &:nth-of-type(4) {
+    input[type='checkbox'] + label {
+      border: 2px solid rgba(var(--color-membership-4), 0.6);
+      background-color: rgba(var(--color-membership-4), 0.2);
+      &:hover {
+        background-color: rgba(var(--color-membership-4), 0.4);
+      }
+    }
+    input[type='checkbox']:checked + label {
+      background-color: rgba(var(--color-membership-4), 1);
+    }
+  }
+  &:nth-of-type(5) {
+    input[type='checkbox'] + label {
+      border: 2px solid rgba(var(--color-membership-5), 0.6);
+      background-color: rgba(var(--color-membership-5), 0.2);
+      &:hover {
+        background-color: rgba(var(--color-membership-5), 0.4);
+      }
+    }
+    input[type='checkbox']:checked + label {
+      background-color: rgba(var(--color-membership-5), 1);
+    }
+  }
+  &:nth-of-type(6) {
+    input[type='checkbox'] + label {
+      border: 2px solid rgba(var(--color-membership-6), 0.6);
+      background-color: rgba(var(--color-membership-6), 0.2);
+
+      &:hover {
+        background-color: rgba(var(--color-membership-6), 1);
+      }
+    }
+    input[type='checkbox']:checked + label {
+      background-color: rgba(var(--color-membership-6), 1);
+    }
+  }
+}
