snapshot button functionality

--- a/ui/scss/component/_videojs.scss
+++ b/ui/scss/component/_videojs.scss
@@ -436,6 +436,9 @@ button.vjs-big-play-button {
 .vjs-subs-caps-button {
   order: 10 !important;
 }
+.vjs-snapshot-button {
+  order: 10 !important;
+}
 .vjs-button--autoplay-next {
   order: 11 !important;
 }
