Link to Stripe billing / account sections (#2291)
* add links to stripe account and billing section

* pull out consts

* add email to account status overview

* fix things pointed out in review

* add strings for translation

* touchups

--- a/ui/scss/component/_stripe-card.scss
+++ b/ui/scss/component/_stripe-card.scss
@@ -337,7 +337,7 @@ pre {
   display: block;
 }
 
-.add-payment-card-div {
+.add-payment-card {
   .card__header--between,
   .card__title-section {
     display: block;
@@ -358,4 +358,16 @@ pre {
   box-shadow: unset;
   color: #32325d;
   background-color: white !important;
+}
+
+.stripe-billing-history {
+  margin-top: var(--spacing-m);
+}
+
+.stripe-billing-history__header {
+  margin-bottom: var(--spacing-xxs);
+}
+
+.remove-card__button {
+  margin-left: var(--spacing-s);
 }
