Remove border from comment input

--- a/ui/scss/component/_textarea-suggestions.scss
+++ b/ui/scss/component/_textarea-suggestions.scss
@@ -20,7 +20,7 @@
 .MuiAutocomplete-root {
   background-color: var(--color-input-bg);
   border-radius: var(--border-radius);
-  border: 2px solid var(--color-border) !important;
+  // border: 2px solid var(--color-border) !important;
 }
 
 .comment-create__auth {
