--- a/ui/component/channelSections/Section/style.scss
+++ b/ui/component/channelSections/Section/style.scss
@@ -1,4 +1,5 @@
 @import '~ui/scss/init/breakpoints';
+@import '~ui/scss/init/mixins';
 
 .channel-section-card {
   width: 100%;
@@ -31,11 +32,9 @@
 }
 
 .channel-section-card__title {
+  @include constrict();
   display: flex;
-
-  //text-overflow: ellipsis;
-  //overflow: hidden;
-  //white-space: nowrap;
+  margin-right: var(--spacing-l);
 }
 
 .channel-section-card__menu {
