separate out advanced textarea, fix comment channel selector width, a… (#7634)
* separate out advanced textarea, fix comment channel selector width, add advanced text icon

* fix master conflicts

* fixes

* fix channel description edit

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -41,7 +41,7 @@
         margin: 0px var(--spacing-xxs);
       }
 
-      .button + .commentCreate {
+      .button + .comment-create {
         margin-top: var(--spacing-xxs);
       }
     }
@@ -659,7 +659,7 @@
   }
 }
 
-.button_selectedServer {
+.button__selected-server {
   display: inline;
   float: right;
   select {
