--- a/ui/scss/component/_search.scss
+++ b/ui/scss/component/_search.scss
@@ -90,7 +90,7 @@
   .radio,
   .checkbox {
     display: inline-block;
-    margin-top: 0;
+    margin-top: 5px;    // UPDATE: Helps to align items in "Other Options" in search
 
     &:not(:first-of-type) {
       margin-top: var(--spacing-s);
