--- a/ui/scss/component/_file-thumbnail.scss
+++ b/ui/scss/component/_file-thumbnail.scss
@@ -3,11 +3,11 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 10px; // UPDATE: Changed thumbnail viewed bar height to 10px
+    height: 5px;
     background-color: var(--color-gray-7);
 }
 
 .file-thumbnail__viewed-bar-progress {
-    height: 10px; // UPDATE: Changed thumbnail viewed progress bar height to 10px
-    background-color: red; // UPDATE: Changed progress bar color to red
+    height: 5px;
+    background-color: var(--color-primary);
 }
